--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,6 @@ path = "src/main.rs"
 [dependencies]
 advmac = { version = "1.0.3", default-features = false, features = ["serde", "std"] }
 dhcproto = { git = "https://github.com/nocduro/dhcproto.git" }
-ipnet = "2.5"
+ipnet = { version = "2.5", features = ["serde"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
