--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ path = "src/main.rs"
 
 [dependencies]
 advmac = { version = "1.0.3", default-features = false, features = ["serde", "std"] }
+compact_str = { version = "0.9.0", features = ["serde"] }
 dhcproto = { git = "https://github.com/nocduro/dhcproto.git" }
 ipnet = { version = "2.5", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
