--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,9 @@ path = "src/main.rs"
 
 [dependencies]
 advmac = { version = "1.0.3", default-features = false, features = ["serde", "std"] }
+arc-swap = "1.7.1"
 compact_str = { version = "0.9.0", features = ["serde"] }
+dashmap = "6.1.0"
 dhcproto = { git = "https://github.com/nocduro/dhcproto.git" }
 ipnet = { version = "2.5", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
