--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,5 @@ dhcproto = { git = "https://github.com/nocduro/dhcproto.git" }
 ipnet = { version = "2.5", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
