--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ compact_str = { version = "0.9.0", features = ["serde"] }
 dashmap = "6.1.0"
 dhcproto = { git = "https://github.com/nocduro/dhcproto.git" }
 ipnet = { version = "2.5", features = ["serde"] }
+pico-args = "0.5.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tracing = "0.1.41"
