--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,14 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-default-run = "server"
+default-run = "shadowdhcp"
 
 [[bin]]
 name = "client"
 path = "src/client.rs"
 
 [[bin]]
-name = "server"
+name = "shadowdhcp"
 path = "src/main.rs"
 
 [dependencies]
@@ -26,4 +26,4 @@ pico-args = "0.5.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt", "std"] }
