--- a/config.json
+++ b/config.json
@@ -1,22 +1,20 @@
 {
-	"dns_v4": [
-		"8.8.8.8",
-		"8.8.4.4"
-	],
-	"subnets_v4": [
-		{
-			"net": "100.100.1.0/24",
-			"gateway": "100.100.1.1"
-		},
-		{
-			"net": "100.100.2.0/24",
-			"gateway": "100.100.3.1"
-		}
-	],
-	"option82_extractors": [
-		"remote_only",
-		"subscriber_only",
-		"circuit_and_remote",
-		"remote_first_12"
-	]
+  "dns_v4": ["8.8.8.8", "8.8.4.4"],
+  "subnets_v4": [
+    {
+      "net": "100.100.1.0/24",
+      "gateway": "100.100.1.1"
+    },
+    {
+      "net": "100.100.2.0/24",
+      "gateway": "100.100.3.1"
+    }
+  ],
+  "option82_extractors": [
+    "remote_only",
+    "subscriber_only",
+    "circuit_and_remote",
+    "remote_first_12"
+  ],
+  "log_level": "debug"
 }
