--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,16 @@ path = "src/client.rs"
 name = "shadowdhcp"
 path = "src/main.rs"
 
+[profile.release]
+strip = true
+panic = "abort"
+
+[profile.release-lto]
+inherits = "release"
+strip = true
+lto = true
+panic = "abort"
+
 [dependencies]
 advmac = { version = "1.0.3", default-features = false, features = ["serde", "std"] }
 arc-swap = "1.7.1"
