--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,4 +68,4 @@ jobs:
       - name: Create GitHub Release
         env:
           GH_TOKEN: ${{ github.token }}
-        run: gh release create ${{ github.ref_name }} dist/* --generate-notes --repo ${{ github.repository }}
+        run: gh release create ${{ github.ref_name }} dist/* --generate-notes --draft --repo ${{ github.repository }}
