--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,3 +1,35 @@
+# ============================================================================
+# Release Workflow
+# ============================================================================
+#
+# To create a new release:
+#
+#   1. Make sure you're on main and it's up to date:
+#      git checkout main
+#      git pull
+#
+#   2. Create and push a tag:
+#      git tag v0.1.0
+#      git push origin v0.1.0
+#
+#   3. Watch the workflow run in the Actions tab on GitHub
+#
+#   4. Once complete, find the draft release under Releases, add notes,
+#      and click "Publish release"
+#
+# To redo a failed release:
+#
+#   - Option A: Go to Actions → click failed run → "Re-run all jobs"
+#
+#   - Option B: Delete and recreate the tag:
+#       git push origin --delete v0.1.0
+#       git tag -d v0.1.0
+#       # (delete the draft release on GitHub)
+#       git tag v0.1.0
+#       git push origin v0.1.0
+#
+# ============================================================================
+
 name: Release
 
 on:
