--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@
 #   1. Make sure you're on main and it's up to date:
 #      git checkout main
 #      git pull
+#      // edit Cargo.toml with new version, and commit
 #
 #   2. Create and push a tag:
 #      git tag v0.1.0
