--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,13 +50,13 @@ jobs:
         include:
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
-            suffix: linux-glibc
+            suffix: linux-glibc-x86_64
           - target: x86_64-unknown-linux-musl
             os: ubuntu-latest
-            suffix: linux-musl
+            suffix: linux-musl-x86_64
           - target: x86_64-pc-windows-msvc
             os: windows-latest
-            suffix: windows
+            suffix: windows-x86_64
           - target: aarch64-apple-darwin
             os: macos-latest
             suffix: macos-aarch64
